# oss-insight

./: Cargo.toml  README.md
src/: lib.rs  main.rs  timer.rs
src/commands/: cli.rs  crawler.rs  mod.rs  util.rs
src/crawler/: github.rs  mod.rs  ossinsight.rs
