[package]
name = "oss-insight"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
octocrab = "0.47.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
