[package]
name = "oss-insight"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
